modification du index

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <section class="men">
       <div class="container">
         <h2 class="titre_resto">Restaurants</h2>
-
+        <!--la pallette du gout-->
         <div class="menus_resto">
-          <a class="resto" href="./pages menus/lapallettedugout.html">
+          <a class="resto" href="./pages menues/lapallettedugout.html">
             <img src="./images/resto1.jpg" alt="" class="resto_img">
             <span class="resto_badge">Nouveau</span>
             <div class="resto_footer">
@@ -94,8 +94,8 @@
             </div>
           </a>
 
-
-          <a class="resto" href="./pages menus/lanoteenchantée.html">
+          <!--la note enchantee-->
+          <a class="resto" href="./pages menues/lanoteenchantée.html">
             <img src="./images/RESTO3.jpg" alt="" class="resto_img">
             <span class="resto_badge">Nouveau</span>
             <div class="resto_footer">
@@ -108,8 +108,8 @@
               </div>
             </div>
           </a>
-
-          <a class="resto" href="./pages menus/àlafrançaise.html">
+          <!--à la francaise-->
+          <a class="resto" href="./pages menues/àlafrançaise.html">
             <img src="./images/resto4.jpg" alt="" class="resto_img">
             <div class="resto_footer">
               <div class="resto_content">
@@ -121,11 +121,13 @@
               </div>
             </div>
           </a>
-          <a class="resto" href="./pages menus/Ledélicedessens.html">
+
+          <!--le delecice des sens-->
+          <a class="resto" href="./pages menues/Ledélicedessens.html">
             <img src="./images/RESTO2.jpg" alt="" class="resto_img">
             <div class="resto_footer">
               <div class="resto_content">
-                <h3 class="resto_nom">Le delice des snes</h3>
+                <h3 class="resto_nom">Le delice des sens</h3>
                 <span class="point_resto">Folie-méricourt</span>
               </div>
               <div class="ht">
