--- a/pages menues/lanoteenchantée.html
+++ b/pages menues/lanoteenchantée.html
@@ -25,7 +25,7 @@
 <body>
     <!--logo avec fleche de retour-->
     <header class="logo_arrow">
-        <div class="arrow"><a href="./index.html"><i class="fas fa-arrow-left"></i></a></div>
+        <div class="arrow"><a href="../index.html"><i class="fas fa-arrow-left"></i></a></div>
         <h1 class="logo-menus"><a href="./index.html">Ohmyfood</a></h1>
     </header>
     <main class="resto-main">
