petit modif css et index

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2 class="titre_resto">Restaurants</h2>
         <!--la pallette du gout-->
         <div class="menus_resto">
-          <a class="resto" href=" ./pages menues/lapallettedugout.html">
+          <a class="resto" href="./pages-menues/lapallettedugout.html">
             <img src="./images/resto1.jpg" alt="" class="resto_img">
             <span class="resto_badge">Nouveau</span>
             <div class="resto_footer">
@@ -95,8 +95,8 @@
           </a>
 
           <!--la note enchantee-->
-          <a class="resto" href="./pages menues/lanoteenchantée.html">
-            <img src="./images/RESTO3.jpg" alt="" class="resto_img">
+          <a class="resto" href="./pages-menues/lanoteenchantée.html">
+            <img src="./images/RESTO3.jpg" alt="#" class="resto_img">
             <span class="resto_badge">Nouveau</span>
             <div class="resto_footer">
               <div class="resto_content">
@@ -109,7 +109,7 @@
             </div>
           </a>
           <!--à la francaise-->
-          <a class="resto" href="./pages menues/àlafrançaise.html">
+          <a class="resto" href="./pages-menues/àlafrançaise.html">
             <img src="./images/resto4.jpg" alt="" class="resto_img">
             <div class="resto_footer">
               <div class="resto_content">
@@ -123,7 +123,7 @@
           </a>
 
           <!--le delecice des sens-->
-          <a class="resto" href="./pages menues/Ledélicedessens.html">
+          <a class="resto" href="./pages-menues/Ledélicedessens.html">
             <img src="./images/RESTO2.jpg" alt="" class="resto_img">
             <div class="resto_footer">
               <div class="resto_content">
